# libactpol

./: .gitignore  AUTHORS  COPYING  Makefile.am  README.md  configure  configure.ac  run_configure
doc/: Makefile  actpol_pointing_memo.tex  focalplane.eps  plot_focalplane.pro  plot_refraction.pro  pointing.tex  references.bib  refraction.eps  run.pro
m4/: libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
src/: .gitignore  Makefile.am  actpol_refraction.c  actpol_tod_info.c  array.c  astro.c  debug.h  dirfile.c  fetch_finals2000A_truncated  finals2000A.truncated  getdata.c  iers_bulletin_a.c  iers_bulletin_a.h  make_iers_bulletin_a_dot_c.py  map.c  oldact.c  quaternion.c  state.c  test.c  test_quaternion.c
src/actpol/: actpol.h  array.h  astro.h  constants.h  dirfile.h  getdata.h  iers_bulletin_a.h  make_constants_h.py  map.h  math.h  oldact.h  quaternion.h  state.h  util.h  vec3.h
